add migration and register endpoint

--- a/.env_dev
+++ b/.env_dev
@@ -1,1 +1,1 @@
-export EDUC_DATABASE_URL="postgresql://postgres:123@dslocalhost:32700/EDUC_FASTAPI"
+export EDUC_DATABASE_URL="postgresql://root:root@localhost:32700/EDUC_FASTAPI"
